# ShadowCaster

./: .gitignore  README.md  output.txt
casting/: Cargo.toml  build.rs
casting/cuda/: cast_kernel.cu
casting/src/: lib.rs
casting/src/caster/: cast_impl.rs  color.rs  fragment_shader.rs  gui.rs  map_io.rs  mod.rs  model.rs  viz.rs
config/: config.json
maps/: test_gl.txt
nannou_display/: Cargo.toml  build.rs
nannou_display/cuda/: cast_kernel.cu  cast_kernel.hpp  cuda_err_check.hpp  shadow_cast.cu  shadow_cast.hpp
nannou_display/src/: cuda_helper.rs  main.rs  map_io.rs  model.rs  viz.rs
