[package]
name = "casting"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
rfd = "0.8.2"
serde = "1.0"
nannou = "0.18"
serde_json = "1.0"
nannou_egui = "0.5.0"
serde_derive = "1.0.137"

[build-dependencies]
cc = "1.0"

[[bin]]
name="cast"
path="src/bin/test_cast.rs"
